[gd_scene load_steps=8 format=3 uid="uid://bs7k4xs71m1lu"]

[ext_resource type="Script" path="res://Coin.gd" id="1_4705g"]
[ext_resource type="Texture2D" uid="uid://dd6v1mc5grh07" path="res://assets/visual/kenney_pixel-platformer/Tiles/tile_0151.png" id="1_wm03c"]
[ext_resource type="AudioStream" uid="uid://bka4prdjlo63e" path="res://assets/audio/kenney_digital-audio/Audio/powerUp9.ogg" id="3_nxgy1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m6byr"]
radius = 13.0

[sub_resource type="Gradient" id="Gradient_7b5ba"]
offsets = PackedFloat32Array(0, 0.579082, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4fid1"]
gradient = SubResource("Gradient_7b5ba")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rxdv5"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 6.14
direction = Vector3(0, -1, 0)
spread = 106.875
initial_velocity_min = 59.21
initial_velocity_max = 135.96
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 3.0
color = Color(0.956863, 0.705882, 0.105882, 1)
color_ramp = SubResource("GradientTexture1D_4fid1")

[node name="Coin" type="Node2D"]
script = ExtResource("1_4705g")

[node name="Tile0151" type="Sprite2D" parent="."]
texture = ExtResource("1_wm03c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_m6byr")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_rxdv5")
lifetime = 0.3
one_shot = true
explosiveness = 0.85

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PickUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nxgy1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
